# guweb

./: .env.example  Makefile  main.py  pyproject.toml
adapters/: database.py
blueprints/: admin.py  frontend.py
common/: lifecycle.py  logging.py  privileges.py  settings.py  utils.py
constants/: regexes.py
ext/: config.sample.py  nginx.conf
objects/: glob.py  logging.py  settings.py  settings_utils.py  utils.py
state/: cache.py  clients.py
static/css/: style.css
static/css/pages/: beatmap.css  leaderboard.css  profile.css  score.css
static/js/pages/: beatmap.js
templates/: beatmap.html  leaderboard.html  profile.html  score.html
