[tool.poetry]
name = "guweb"
version = "2.0.0"
description = ""
authors = ["Akatsuki Team"]
readme = "README.md"
packages = [{ include = "bancho" }]


[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.20.0"
bcrypt = "^4.3.0"
aiomysql = "^0.2.0"
aiohttp = "^3.11.14"
mysql-connector = "^2.2.9"
orjson = "^3.10.16"
timeago = "^1.0.16"
markdown2 = "^2.5.3"
pillow = "^11.1.0"
databases = "0.8.0"
pyyaml = "^6.0.2"
sqlalchemy = "1.4.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
